idk what to say

--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -24,6 +24,7 @@ a {
   color: var(--greyDark);
   text-decoration: none;
   transition: 0.5s;
+  line-height: 3;
 }
 
 a:hover {
@@ -33,30 +34,56 @@ a:hover {
 p {
   color: var(--sliver);
   font-size: 15px;
-  line-height: 30;
   margin: 20px 0;
 }
 
-h1,h2,h3,h4,h4,h6 {
+h1,
+h2,
+h3,
+h4,
+h4,
+h6 {
   font-weight: 400;
 }
 
 .container {
   max-width: 80%;
-  max-width: auto;
+  margin: auto;
 }
 
 .flexsb {
   display: flex;
   justify-content: space-between;
+  width: 100%;
+}
+
+button {
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 17px;
+  background-color: var(--primaryColor);
+  color: var(--white);
+  padding: 15px 50px;
+  border-radius: 50px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.primaryBtn {
+  background: none;
+  border: 2px solid var(--primaryColor);
 }
 
 /* ----------------header----------------- */
+
 header {
   background-color: var(--headingColor);
   height: 10vh;
   line-height: 10vh;
   position: sticky;
+  top: 0;
+  left: 0;
   width: 100%;
   z-index: 999;
 }
@@ -64,3 +91,257 @@ header {
 header a {
   margin-left: 40px;
 }
+
+.toggle {
+  cursor: pointer;
+  color: var(--white);
+  display: none;
+}
+
+.logoContainer {
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 768px) {
+
+}
+@media screen and (max-width: 768px) {
+  .container {
+    justify-content: space-between;
+    width: 100%;
+  }
+  .aboutContainer {
+    flex-wrap: wrap;
+    align-items: center;
+    height: 90vh;
+  }
+  .left {
+    display: block;
+    margin: 0 auto;
+  }
+
+  header .nav {
+    display: none;
+  }
+
+  header a {
+    width: 100%;
+    display: block;
+    color: var(--white);
+  }
+  .toggle {
+    display: block;
+    background: none;
+    font-size: 25px;
+    margin: 0;
+    padding: 20px;
+  }
+  .hideMenu {
+    display: block;
+    position: absolute;
+    top: 10vh;
+    left: 0;
+    width: 100%;
+    background-color: var(--headingColor);
+  }
+}
+/* ----------------header----------------- */
+
+section {
+  height: 90vh;
+  display: flex;
+  align-items: center;
+}
+
+.flex {
+  display: flex;
+}
+
+/* ----------------hero----------------- */
+.hero {
+  position: relative;
+}
+
+.hero::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url("../public/images/home-bg.png");
+  background-size: cover;
+  background-attachment: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 90vh;
+}
+
+.heroContainer {
+  max-width: 50%;
+  margin: auto;
+  text-align: center;
+}
+
+.hero h1 {
+  font-size: 60px;
+  font-weight: 600;
+  color: var(--primaryColor);
+}
+
+.heroContainer p {
+  line-height: 1.5;
+  overflow: auto;
+}
+
+/* ----------------hero----------------- */
+.heading {
+  font-size: 30px;
+  color: var(--primaryColor);
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+/* ----------------about----------------- */
+.about .primaryBtn {
+  margin-left: 20px;
+}
+.about .heading {
+  text-align-last: left;
+  margin: 0;
+}
+
+.aboutContainer {
+  width: 95%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.right {
+  flex-grow: 1; /* grow width automatically if needed */
+  min-width: 0;
+  flex: 0 65%;
+  margin: 20px;
+  padding: 20px;
+}
+
+.left {
+  padding: 20px;
+}
+
+.btnContainer {
+  display: block;
+  margin: 0 auto;
+}
+
+.btnContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* ----------------about----------------- */
+/* ----------------services----------------- */
+.grid3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+}
+
+.services .box {
+  background-color: var(--primaryBackground);
+  padding: 35px;
+}
+
+.services i {
+  color: var(--primaryColor);
+}
+
+.services h3 {
+  margin-top: 20px;
+}
+
+/* ----------------services----------------- */
+.grid4 {
+  grid-template-columns: repeat(4, 1fr);
+  height: 50vh;
+  place-items: center;
+  text-align: center;
+}
+/* ----------------counter----------------- */
+.counter {
+  margin-top: 80px;
+  position: relative;
+}
+
+.hero.counter::after {
+  background-image: url("../public/images/testimonials-bg.png");
+  height: 50vh;
+}
+
+.counter h1 {
+  margin: 0;
+  font-size: 30px;
+}
+/* ----------------counter----------------- */
+
+/* ----------------article----------------- */
+article {
+  margin-top: 50px;
+  margin-bottom: 80px;
+}
+article img {
+  width: 100%;
+  height: 100%;
+}
+
+article .box {
+  position: relative;
+  transition: 0.5s;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  transition: 0.5s;
+  z-index: 2;
+  opacity: 0;
+}
+
+.overlay::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--primaryColor);
+  opacity: 0;
+  transition: 0.5s;
+  z-index: -1;
+}
+
+article .box:hover .overlay,
+article .box:hover .overlay::after {
+  opacity: 1;
+}
+
+.catButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 40px 0;
+}
+
+.catButton button {
+  text-transform: capitalize;
+  margin-right: 20px;
+}
+
+/* ----------------article----------------- */
