--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -103,7 +103,6 @@ header a {
   align-items: center;
 }
 @media screen and (max-width: 768px) {
-
 }
 @media screen and (max-width: 768px) {
   .container {
@@ -345,3 +344,63 @@ article .box:hover .overlay::after {
 }
 
 /* ----------------article----------------- */
+/* ----------------testimonials----------------- */
+.testimonials {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.testimonials::after {
+  background-image: url("../public/images/testimonials-bg.png");
+}
+
+.testimonials .box {
+  max-width: 60%;
+  margin: auto;
+}
+.testimonials i {
+  background-color: var(--white);
+  font-size: 20px;
+  padding: 10px;
+  margin: 30px 0;
+  display: inline-block;
+  color: var(--primaryColor);
+}
+
+.testimonials .img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 120px;
+  height: 120px;
+  margin: auto;
+  border-radius: 50%;
+  border: 3px solid var(--primaryColor);
+}
+.testimonials img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 3px solid var(--primaryColor);
+  object-fit: cover;
+}
+label {
+  color: var(--primaryColor);
+  margin: 10px 0;
+  display: inline-block;
+}
+/* ----------------testimonials----------------- */
+/* ----------------bog----------------- */
+.blog img{
+  width: 100%;
+}
+.blog .box {
+  background-color: var(--primaryBackground);
+  border-radius: 10px;
+}
+.blog .text {
+  padding: 10px 30px;
+}
+/* ----------------bog----------------- */
